Table Circuits {
  id int [pk]
  name varchar
}

Table Athlete {
  id int [pk]
  name varchar 
  birthday datetime
  country varchar
}

Table Judges {
  id int [pk]
  name varchar
  country varchar
}

Table Countries {
  name varchar [pk]
}

Table IndividualSkate {
  id int [pk]
  competition int [ref: > Competitions.id] 
  athlete varchar
  rank int
  type boolean // free or short
  score int
}

Table Competitions {
  id int [pk]
  level int // novice, junior, senior
  host_country varchar [ref: > Countries.name]
  start_time datetime
  end_time datetime
}

Table TechnicalElements {
  id int [pk]
  skate_id int [ref: > IndividualSkate.id]
  type varchar
  base_score int
  sequence_number int
  is_second_half boolean // Marked by x next to base value
  downgraded boolean // Marked by < or <<
  edge_call boolean // Marked by e
  is_rep boolean // Marked by +REP 
  failed_requirements boolean // Marked by V
  edge_warning boolean // Marked by ! 
  GOE int 
}

Table PerformanceElement {
  id int [pk]
  skate_id int [ref: > IndividualSkate.id]
  type varchar
  multiplier int
}

Table TechnicalElementReference {
  name varchar [pk]
  base_score int
  is_jump boolean
}

Table JudgesTechnical {
  judge int [ref: > Judges.id]
  technical_element int [ref: > TechnicalElements.id]
  score int 
  dropped boolean
}

Table JudgesPerformance {
  judge int [ref: > Judges.id]
  perfromance_element int [ref: > PerformanceElement.id]
  score int 
}

Table Deductions {
  skate int [ref: > IndividualSkate.id]
  reason varchar
  points_off int
}

Ref: Athlete.country > Countries.name
Ref: Judges.country > Countries.name
Ref: IndividualSkate.athlete > Athlete.id















